--- a/app/globals.css
+++ b/app/globals.css
@@ -30,10 +30,22 @@ html {
 
 h1 {
   font-weight: 500;
+  color: #202937;
 }
 h2 {
   font-weight: 500;
+  color: #202937;
 }
 h3 {
   font-weight: 500;
+  color: #202937;
+}
+h4 {
+  color: #202937;
+}
+h5 {
+  color: #202937;
+}
+h6 {
+  color: #202937;
 }
